# mai_os_labs

./: README.md
cp/doc/: cp.docx
cp/src/: CMakeLists.txt  client.cpp  server.cpp
docs/: kdiotcehtlab2os.docx  otchet
lab1/: lab1.docx
lab2/src/: CMakeLists.txt  lab2.c  main.cpp
lab3/doc/: lab3.docx
lab4/doc/: lab4.docx
lab4/src/: main.cpp
lab5/doc/: 5lab.docx
lab5/include/: lib.h
lab5/src/: CMakeLists.txt  main1.cpp  main2.cpp  realisation1.cpp  realisation2.cpp
lab6/doc/: OS Report Template.docx
lab6/src/: CMakeLists.txt  child.cpp  main.cpp  server.hpp  tree.hpp
src/: main.cpp
